[package]
name = "commit-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-lsp = "0.20.0"
