[package]
name = "commit-lsp"
version = "0.2.1"
edition = "2024"
description = "Language Server for commit messages"
readme = "README.md"
repository = "https://github.com/texel-sensei/commit-lsp"
license = "GPL-3.0-only"
categories = ["command-line-utilities", "development-tools"]
keywords = ["lsp", "commit", "language-server", "lint"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
git-url-parse = "0.4.4"
gitlab = "0.1710.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json"] }
secure-string = "0.3.0"
serde = "1.0.197"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
